added syncronization function, so the content can be sycronized to local.

--- a/src/main/webapp/WEB-INF/i18n/messages.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages.properties
@@ -1,9 +1,9 @@
 #Created by JInto - www.guh-software.de
-#Fri Jul 05 10:26:12 EDT 2013
+#Thu Jul 11 13:37:47 EDT 2013
 \ =\u7A7A
 ALL_MY_TEAM_CAN_SEE=\u5728\u670B\u53CB\u5708\u5185\u53EF\u89C1
 AddOnName=\u6536\u85CF\u2022\u5206\u4EAB
-AddOnNotice=\u8BF7\u5C06\u8BE5[\u6536\u85CF\u2022\u5206\u4EAB]\u5FEB\u6377\u5DE5\u5177\u62D6\u5230\u6536\u85CF\u680F\u4E0A\uFF0C\u4EE5\u540E\u5F53\u60A8\u8BBF\u95EE\u7F51\u9875\u65F6\uFF0C\u53EA\u8981\u70B9\u51FB\u5B83\u5C31\u80FD\u65B9\u4FBF\u7684\u6536\u85CF\u5E76\u5171\u4EAB\u4E86.
+AddOnNotice=\u8BF7\u5C06\u8BE5[\u6536\u85CF\u2022\u5206\u4EAB]\u5FEB\u6377\u5DE5\u5177\u62D6\u5230\u6536\u85CF\u680F\u4E0A\uFF0C\u4EE5\u540E\u5F53\u60A8\u8BBF\u95EE\u7F51\u9875\u65F6\uFF0C\u53EA\u8981\u70B9\u51FB\u5B83\u5C31\u80FD\u65B9\u4FBF\u7684\u6536\u85CF\u5E76\u5171\u4EAB\u4E86\u3002
 Big\ Tag=\u7C7B\u522B
 Circle=\u5708\u5B50
 Content=\u5185\u5BB9
@@ -58,7 +58,7 @@ entity_reference_not_managed=This relationship is managed from the {0} side.
 entity_show=Show {0}
 entity_tag_create=\u65B0\u52A0\u4E00\u4E2A\u6807\u7B7E\uFF01
 entity_update=\u4FEE\u6539{0}
-error_dataaccessfailure_problemdescription=\u6B63\u5728\u8FDB\u884C\u540E\u53F0\u6570\u636E\u5E93\u5B89\u5168\u5907\u4EFD\uFF0C\u8BF7\u7A0D\u540E\u518D\u8BD5.
+error_dataaccessfailure_problemdescription=\u6B63\u5728\u8FDB\u884C\u540E\u53F0\u6570\u636E\u5E93\u5B89\u5168\u5907\u4EFD\uFF0C\u8BF7\u7A0D\u540E\u518D\u8BD5\u3002
 error_dataaccessfailure_title=\u6B63\u5728\u5907\u4EFD\u6570\u636E\u5E93
 error_resourcenotfound_problemdescription=\u60A8\u6240\u5B9A\u4F4D\u7684\u7F51\u9875\u5C1A\u672A\u542F\u7528\uFF0C\u8BF7\u91CD\u65B0\u5B9A\u4F4D\uFF0C\u6216\u7ACB\u5373\u62A2\u6CE8\u8BE5\u7F51\u9875\u3002
 error_resourcenotfound_title=\u8BE5\u4F4D\u7F6E\u5C1A\u672A\u542F\u7528
