modified the text on message button into "send" (before was save"

--- a/src/main/webapp/WEB-INF/i18n/messages.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Thu Jul 11 13:37:47 EDT 2013
+#Fri Aug 09 09:20:47 EDT 2013
 \ =\u7A7A
 ALL_MY_TEAM_CAN_SEE=\u5728\u670B\u53CB\u5708\u5185\u53EF\u89C1
 AddOnName=\u6536\u85CF\u2022\u5206\u4EAB
@@ -36,6 +36,7 @@ button_myhome={0}\u7684\u7A7A\u95F4
 button_proceed=Proceed
 button_reset=\u6E05\u7A7A
 button_save=\u4FDD\u5B58
+button_send=\u53D1\u9001
 button_showcookie=Show Cookie
 button_showmessage=Show Message
 button_showstacktrace=Show Stack Trace
