now we allow user to set the autorefresh time on the list_detail_view page.

--- a/src/main/webapp/WEB-INF/i18n/application.properties
+++ b/src/main/webapp/WEB-INF/i18n/application.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Thu Jul 04 10:52:58 EDT 2013
+#Fri Aug 09 19:33:42 EDT 2013
 application_name=Bigbang
 label_com_aeiou_bigbang_domain_bigtag=Big Tag
 label_com_aeiou_bigbang_domain_bigtag_authority=\u8C01\u53EF\u4EE5\u770B\u89C1
@@ -133,6 +133,7 @@ menu_item_twitter_list_label=\u7B14\u8BB0
 menu_item_twitter_new_label=\u7B14\u8BB0
 menu_item_useraccount_list_label=\u7528\u6237\u4FE1\u606F
 menu_item_useraccount_new_label=\u7528\u6237\u4FE1\u606F
+refresh_time=\u81EA\u52A8\u66F4\u65B0\u5185\u5BB9\: \u6BCF
 relayout_close=\u9690\u85CF
 relayout_list_size=\u663E\u793A\u5185\u5BB9\u6761\u6570\uFF1A
 relayout_move_down=\u5411\u4E0B\u79FB
@@ -141,3 +142,4 @@ relayout_move_right=\u5411\u53F3\u79FB
 relayout_move_up=\u5411\u4E0A\u79FB
 relayout_reset=\u91CD\u65B0\u5E03\u5C40
 relayout_submit=\u786E\u5B9A
+second=\u79D2
