--- a/src/main/webapp/WEB-INF/i18n/application_fr.properties
+++ b/src/main/webapp/WEB-INF/i18n/application_fr.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Thu Jul 04 10:52:58 EDT 2013
+#Fri Aug 09 19:33:42 EDT 2013
 application_name=Bigbang
 label_com_aeiou_bigbang_domain_bigtag=Big Tag
 label_com_aeiou_bigbang_domain_bigtag_authority=Authority
@@ -133,6 +133,7 @@ menu_item_twitter_list_label=Blogs
 menu_item_twitter_new_label=Blogs
 menu_item_useraccount_list_label=User Accounts
 menu_item_useraccount_new_label=User Account
+refresh_time=automatically refresh content every 
 relayout_close=Cacher
 relayout_list_size=items to display\:
 relayout_move_down=move down
@@ -141,3 +142,4 @@ relayout_move_right=move to right
 relayout_move_up=move down
 relayout_reset=relayout
 relayout_submit=Submit
+second=seconds
