Modified the text on interface. fixed the bug that if the discription you give contains "," or ".", the content after it will not displayed on personal space. so the parameters for spring message can not contain "," or "."....

--- a/src/main/webapp/WEB-INF/i18n/messages.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Fri Aug 09 09:20:47 EDT 2013
+#Tue Aug 13 22:05:55 EDT 2013
 \ =\u7A7A
 ALL_MY_TEAM_CAN_SEE=\u5728\u670B\u53CB\u5708\u5185\u53EF\u89C1
 AddOnName=\u6536\u85CF\u2022\u5206\u4EAB
@@ -94,6 +94,7 @@ global_menu_newmessage=\u7ED9\u7A7A\u95F4\u4E3B\u4EBA\u7559\u4E2A\u8A00\uFF1F\u6
 global_menu_newnote=\u60F3\u505A\u4E2A\u7948\u7977\uFF0C\u8BB0\u4E2A\u65E5\u5FD7\uFF0C\u8868\u8FBE\u60F3\u6CD5\uFF0C\u603B\u7ED3\u7ECF\u9A8C\uFF1F\u5199\u4E0B\u6765\uFF0C\u8BA9\u5BB6\u4EBA\u4E86\u89E3\uFF0C\u8BA9\u5C81\u6708\u89C1\u8BC1\uFF01
 global_menu_readmore=>>>
 global_menu_resetView=\u6062\u590D\u5230\u9ED8\u8BA4\u8BBE\u7F6E
+global_menu_setView=\u81EA\u5B9A\u4E49\u9875\u9762\u5E03\u5C40
 global_menu_tagsManage=\u7BA1\u7406\u6211\u5B9A\u4E49\u7684\u5206\u7C7B
 global_sponsored=Sponsored by SpringSource
 global_theme=\u754C\u9762\u98CE\u683C
