--- a/src/main/webapp/WEB-INF/i18n/messages_en.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages_en.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Fri Aug 09 09:20:47 EDT 2013
+#Thu Aug 15 11:33:39 EDT 2013
 \ =EMPTY
 ALL_MY_TEAM_CAN_SEE=Visible Only To My Friends
 AddOnName=Save&Share
@@ -83,8 +83,8 @@ global_language_french=Communaut\u00E9 fran\u00E7aise
 global_language_switch=Switch language to {0}
 global_login_notice=Please click here to login and add comments\!  
 global_menu_accountsManage=Manage Account Info
-global_menu_contentsManage=Manage Contents
-global_menu_diaryManage=Manage Notes
+global_menu_contentsManage=Manage My Bookmarks
+global_menu_diaryManage=Manage My Blogs
 global_menu_find=Find by {0}
 global_menu_inboxManage=Check My Messages
 global_menu_list=List all {0}
@@ -94,6 +94,7 @@ global_menu_newmessage=Message to owner? Good idea\! If you don't want others to
 global_menu_newnote=Say a prayer? Write diary? Record an experience or thought? it's time to share them down.
 global_menu_readmore=>>>
 global_menu_resetView=Reset To Default
+global_menu_setView=Customize Page Layout
 global_menu_tagsManage=Manage Tags
 global_sponsored=Sponsored by SpringSource
 global_theme=THEME
