--- a/src/main/webapp/WEB-INF/i18n/messages_fr.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages_fr.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Fri Aug 09 09:20:47 EDT 2013
+#Tue Aug 13 22:05:55 EDT 2013
 \ =EMPTY
 ALL_MY_TEAM_CAN_SEE=visible to my friends
 AddOnName=Save&Share
@@ -94,6 +94,7 @@ global_menu_newmessage=-
 global_menu_newnote=make a pray? write diary? some experience or thought? it's time to write them down.
 global_menu_readmore=>>>
 global_menu_resetView=Reset To Default
+global_menu_setView=Customize Page Layout
 global_menu_tagsManage=Cr\u00E9er mes cat\u00E9gries
 global_sponsored=Sponsored by SpringSource
 global_theme=THEME
