--- a/src/main/webapp/WEB-INF/i18n/application.properties
+++ b/src/main/webapp/WEB-INF/i18n/application.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Fri Aug 09 19:33:42 EDT 2013
+#Thu Aug 15 12:28:16 EDT 2013
 application_name=Bigbang
 label_com_aeiou_bigbang_domain_bigtag=Big Tag
 label_com_aeiou_bigbang_domain_bigtag_authority=\u8C01\u53EF\u4EE5\u770B\u89C1
@@ -105,7 +105,7 @@ label_public_firesomeone=\u4E0D\u518D\u5173\u6CE8
 label_public_firesomeone_explain=\u5C06\u8BE5\u7528\u6237\u7684\u4E66\u7B7E\u548C\u7B14\u8BB0\u4ECE\u60A8\u7684\u7A7A\u95F4\u79FB\u51FA\uFF0C\u8BE5\u7528\u6237\u4E0D\u518D\u80FD\u8BBF\u95EE\u60A8\u8BBE\u4E3A \u2019\u53EA\u5BF9\u670B\u53CB\u53EF\u89C1\u2018 \u7684\u5185\u5BB9\u3002
 label_public_hiresomeone=\u52A0\u4E3A\u670B\u53CB
 label_public_hiresomeone_explain=\u4F7F\u8BE5\u7528\u6237\u7684\u4E66\u7B7E\u548C\u7B14\u8BB0\u51FA\u73B0\u5728\u60A8\u7684\u4E2A\u4EBA\u7A7A\u95F4\uFF0C\u5E76\u5141\u8BB8\u5176\u8BBF\u95EE\u60A8\u8BBE\u4E3A \u2019\u53EA\u5BF9\u670B\u53CB\u53EF\u89C1\u2018 \u7684\u5185\u5BB9\u3002
-label_public_index=\u6B22\u8FCE\u6765{0}\u7684\u7A7A\u95F4----{1}
+label_public_index=\u6B22\u8FCE\u6765{0}\u7684\u7A7A\u95F4----
 label_rememberme=\u8BB0\u4F4F\u6211
 menu_category_bigtag_label=Big Tag
 menu_category_circle_label=Circle
