completed the selenium test base. renamed the theme for future function.

--- a/src/main/webapp/WEB-INF/i18n/messages.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Tue Aug 13 22:05:55 EDT 2013
+#Fri Aug 16 11:16:45 EDT 2013
 \ =\u7A7A
 ALL_MY_TEAM_CAN_SEE=\u5728\u670B\u53CB\u5708\u5185\u53EF\u89C1
 AddOnName=\u6536\u85CF\u2022\u5206\u4EAB
@@ -98,8 +98,10 @@ global_menu_setView=\u81EA\u5B9A\u4E49\u9875\u9762\u5E03\u5C40
 global_menu_tagsManage=\u7BA1\u7406\u6211\u5B9A\u4E49\u7684\u5206\u7C7B
 global_sponsored=Sponsored by SpringSource
 global_theme=\u754C\u9762\u98CE\u683C
-global_theme_alt=alt
-global_theme_standard=standard
+global_theme_default=\u9ED8\u8BA4
+global_theme_sky=\u91D1\u706F\u4E07\u76CF
+global_theme_spidman=\u8718\u86DB\u4FA0
+global_theme_transformers=\u53D8\u5F62\u91D1\u521A
 list_first=First Page
 list_last=Last Page
 list_next=Next Page
