--- a/src/main/webapp/WEB-INF/i18n/messages_fr.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages_fr.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Tue Aug 13 22:05:55 EDT 2013
+#Fri Aug 16 11:16:44 EDT 2013
 \ =EMPTY
 ALL_MY_TEAM_CAN_SEE=visible to my friends
 AddOnName=Save&Share
@@ -98,8 +98,10 @@ global_menu_setView=Customize Page Layout
 global_menu_tagsManage=Cr\u00E9er mes cat\u00E9gries
 global_sponsored=Sponsored by SpringSource
 global_theme=THEME
-global_theme_alt=alt
-global_theme_standard=standard
+global_theme_default=default
+global_theme_sky=alt
+global_theme_spidman=spideman
+global_theme_transformers=transformers
 list_first=First Page
 list_last=Last Page
 list_next=Next Page
