added some theme

--- a/src/main/webapp/WEB-INF/i18n/messages_en.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages_en.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Fri Aug 16 11:16:44 EDT 2013
+#Sun Aug 18 12:29:24 EDT 2013
 \ =EMPTY
 ALL_MY_TEAM_CAN_SEE=Visible Only To My Friends
 AddOnName=Save&Share
@@ -98,9 +98,11 @@ global_menu_setView=Customize Page Layout
 global_menu_tagsManage=Manage Tags
 global_sponsored=Sponsored by SpringSource
 global_theme=THEME
+global_theme_circle=circles
 global_theme_default=default
-global_theme_sky=sky
-global_theme_spidman=spideman
+global_theme_line=lines
+global_theme_sky=stars
+global_theme_spot=spots
 global_theme_transformers=transformers
 list_first=First Page
 list_last=Last Page
