--- a/src/main/webapp/WEB-INF/i18n/messages.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Sun Aug 18 12:29:24 EDT 2013
+#Thu Aug 22 23:22:02 EDT 2013
 \ =\u7A7A
 ALL_MY_TEAM_CAN_SEE=\u5728\u670B\u53CB\u5708\u5185\u53EF\u89C1
 AddOnName=\u6536\u85CF\u2022\u5206\u4EAB
@@ -103,7 +103,7 @@ global_theme_default=\u9ED8\u8BA4
 global_theme_line=\u7EBF\u6761
 global_theme_sky=\u661F\u7A7A
 global_theme_spot=\u6591\u70B9
-global_theme_transformers=\u53D8\u5F62\u91D1\u521A
+global_theme_stone=\u77F3\u5934
 list_first=First Page
 list_last=Last Page
 list_next=Next Page
