changed the welcome home to "share the good ones"

--- a/src/main/webapp/WEB-INF/i18n/messages_fr.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages_fr.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Thu Aug 22 23:22:02 EDT 2013
+#Sun Sep 15 17:04:53 EDT 2013
 \ =EMPTY
 ALL_MY_TEAM_CAN_SEE=visible to my friends
 AddOnName=Save&Share
@@ -139,7 +139,7 @@ webflow_state1_message=This is a simple example to get started with Spring Web F
 webflow_state1_title=Spring Web Flow - View State One
 webflow_state2_message=This is a simple example to get started with Spring Web Flow. The buttons below lead you to another view state (Proceed) or to an end state.
 webflow_state2_title=Spring Web Flow - View State Two
-welcome_h3=Welcome Back Home\!
+welcome_h3=share the good ones \!
 welcome_text=Spring Roo provides interactive, lightweight and user customizable tooling that enables rapid delivery of high performance enterprise Java applications.
 welcome_titlepane=Welcome to {0}
 writeMessageToSpaceOwner=Leave {0} a Message  
