--- a/src/main/webapp/WEB-INF/i18n/messages.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Thu Aug 22 23:22:02 EDT 2013
+#Sun Sep 15 17:04:53 EDT 2013
 \ =\u7A7A
 ALL_MY_TEAM_CAN_SEE=\u5728\u670B\u53CB\u5708\u5185\u53EF\u89C1
 AddOnName=\u6536\u85CF\u2022\u5206\u4EAB
@@ -139,7 +139,7 @@ webflow_state1_message=This is a simple example to get started with Spring Web F
 webflow_state1_title=Spring Web Flow - View State One
 webflow_state2_message=This is a simple example to get started with Spring Web Flow. The buttons below lead you to another view state (Proceed) or to an end state.
 webflow_state2_title=Spring Web Flow - View State Two
-welcome_h3=\u6B22\u8FCE\u56DE\u5230BookMarks\uFF01
+welcome_h3=share the good ones\uFF01
 welcome_text=Spring Roo provides interactive, lightweight and user customizable tooling that enables rapid delivery of high performance enterprise Java applications.
 welcome_titlepane=Welcome to {0}
 writeMessageToSpaceOwner=\u7ED9{0}\u7559\u8A00  
