--- a/src/main/webapp/WEB-INF/i18n/messages_en.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages_en.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Sun Sep 15 17:04:53 EDT 2013
+#Sun Sep 22 13:24:37 EDT 2013
 \ =EMPTY
 ALL_MY_TEAM_CAN_SEE=Visible Only To My Friends
 AddOnName=Save&Share
@@ -9,7 +9,7 @@ Circle=Circle
 Content=Contents
 Customize=Customize
 NotesAndPrays=Notes and Prayers from {0}
-NotesAndPraysOfFriend=Notes and Prays From {0}'s Family and Friends
+NotesAndPraysOfFriend=Blogs From Family and Friends of {0}
 ONLY_FOR_RECEIVER=Visible Only To Receiver
 ONLY_FOR_SELECTED_PERSON=Visible Only To Selected User
 ONLY_MYSELF_CAN_SEE=Visible Only For Myself
