--- a/deploy/database_fr.properties
+++ b/deploy/database_fr.properties
@@ -2,5 +2,5 @@
 #Fri Jan 18 16:49:44 EST 2013
 database.driverClassName=org.postgresql.Driver
 database.url=jdbc\:postgresql\://${OPENSHIFT_POSTGRESQL_DB_HOST}\:${OPENSHIFT_POSTGRESQL_DB_PORT}/mon
-database.username=admin
-database.password=LuvlDIs4AUyY
+database.username=adminyt4mr1m
+database.password=sw8lHer6bv5s
