the view part of send to my email function. only logged in user can see the the send me email link.

--- a/src/main/webapp/WEB-INF/i18n/messages.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Sun Sep 15 17:04:53 EDT 2013
+#Sun Jan 12 19:55:17 EST 2014
 \ =\u7A7A
 ALL_MY_TEAM_CAN_SEE=\u5728\u670B\u53CB\u5708\u5185\u53EF\u89C1
 AddOnName=\u6536\u85CF\u2022\u5206\u4EAB
@@ -132,6 +132,7 @@ security_signup_reason_4=4.\u60A8\u53EF\u4EE5\u5BF9\u60A8\u611F\u5174\u8DA3\u768
 security_signup_reason_5=5. \u5BF9\u4E8E\u4E0D\u5E0C\u671B\u522B\u4EBA\u770B\u5230\u7684\u4E66\u7B7E\u6216\u7B14\u8BB0\uFF0C\u522B\u5FD8\u4E86\u4FDD\u5B58\u524D\u628A\u5B83\u8BBE\u6210\u201C\u53EA\u5BF9\u81EA\u5DF1\u53EF\u89C1\u201D\u3002
 security_signup_reason_last=\u8BA9\u6211\u4EEC\u4E00\u8D77\u5171\u4EAB\u6536\u85CF\u7684\u597D\u4E1C\u897F\u5427 \:-)
 selenium_menu_test_suite=Test Suite
+twitter_rss_link=\u5F53\u6709\u65B0\u8BC4\u8BBA\u65F6\uFF0C\u8BF7\u53D1\u9001\u5230\u6211\u7684\u90AE\u7BB1\uFF01
 webflow_endstate_message=\u8FD9\u5DF2\u7ECF\u662F\u6700\u540E\u4E86
 webflow_endstate_title=Spring Web Flow - End State
 webflow_menu_enter=\u8F93\u5165{0} flow
