--- a/src/main/webapp/WEB-INF/i18n/messages_fr.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages_fr.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Sun Sep 15 17:04:53 EDT 2013
+#Sun Jan 12 19:54:58 EST 2014
 \ =EMPTY
 ALL_MY_TEAM_CAN_SEE=visible to my friends
 AddOnName=Save&Share
@@ -132,6 +132,7 @@ security_signup_reason_4=4. you can listen to any one you interested by clicking
 security_signup_reason_5=5. if you don't want you share your bookmark or the content yet, you can set it as "visible to only my self".
 security_signup_reason_last=Let's go \:-)
 selenium_menu_test_suite=Test Suite
+twitter_rss_link=-Please sent any new remark of this post to my email\!
 webflow_endstate_message=-
 webflow_endstate_title=Spring Web Flow - End State
 webflow_menu_enter=Enter {0} flow
