--- a/src/main/webapp/WEB-INF/i18n/application.properties
+++ b/src/main/webapp/WEB-INF/i18n/application.properties
@@ -1,9 +1,10 @@
-#Created by JInto - www.guh-software.de
-#Thu Aug 15 12:28:16 EDT 2013
+#Updated at Mon Jan 13 22:51:27 EST 2014
+#Mon Jan 13 22:51:27 EST 2014
 application_name=Bigbang
 label_com_aeiou_bigbang_domain_bigtag=Big Tag
 label_com_aeiou_bigbang_domain_bigtag_authority=\u8C01\u53EF\u4EE5\u770B\u89C1
 label_com_aeiou_bigbang_domain_bigtag_commontagname=Common Tag Name
+label_com_aeiou_bigbang_domain_bigtag_contentid=Content I D
 label_com_aeiou_bigbang_domain_bigtag_contenttitle=Content Title
 label_com_aeiou_bigbang_domain_bigtag_contenturl=Content U R L
 label_com_aeiou_bigbang_domain_bigtag_id=Id
@@ -11,6 +12,7 @@ label_com_aeiou_bigbang_domain_bigtag_owner=-\u4E66\u7B7E/\u65E5\u5FD7
 label_com_aeiou_bigbang_domain_bigtag_plural=Big Tags
 label_com_aeiou_bigbang_domain_bigtag_tagname=\u540D\u79F0 *
 label_com_aeiou_bigbang_domain_bigtag_twittercontent=Twitter Content
+label_com_aeiou_bigbang_domain_bigtag_twitterid=Twitter I D
 label_com_aeiou_bigbang_domain_bigtag_twittertitle=Twitter Title
 label_com_aeiou_bigbang_domain_bigtag_type=Owner Name
 label_com_aeiou_bigbang_domain_bigtag_version=Version
@@ -60,6 +62,7 @@ label_com_aeiou_bigbang_domain_remark_id=Id
 label_com_aeiou_bigbang_domain_remark_plural=Remarks
 label_com_aeiou_bigbang_domain_remark_privilege=Privilege
 label_com_aeiou_bigbang_domain_remark_publisher=Publisher
+label_com_aeiou_bigbang_domain_remark_refresh_time=Refresh_time
 label_com_aeiou_bigbang_domain_remark_remarktime=Remark Time
 label_com_aeiou_bigbang_domain_remark_remarkto=Remarkto
 label_com_aeiou_bigbang_domain_remark_remarttime=Remart Time
