Changed the URL from http://ShareThe... to language related URL like http://cn.s...., http://fr....

--- a/src/main/webapp/WEB-INF/i18n/messages_en.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages_en.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Sun Jan 12 19:54:58 EST 2014
+#Thu Feb 27 15:19:16 EST 2014
 \ =EMPTY
 ALL_MY_TEAM_CAN_SEE=Visible Only To My Friends
 AddOnName=Save&Share
@@ -125,7 +125,7 @@ security_login_userlicence=Why shall I sign up?
 security_logout=Logout
 security_signup_message=Why it's good to sign up?
 security_signup_reason_0=By signing up \:  
-security_signup_reason_1=1. you'll get a person web site at http\://ShareTheGoodOnes.com/your regestered name
+security_signup_reason_1=1. you'll get a person web site at http\://www.ShareTheGoodOnes.com/your regestered name
 security_signup_reason_2=2. you can save all your bookmarks onto the website, and share them with your family and friends any time, any where.
 security_signup_reason_3=3. you can also write diary, work log, pray or anything on the web site, you can remark the content wrote by you or others.
 security_signup_reason_4=4. you can listen to any one you interested by clicking his name, then click the + button, then the bookmarks he added and content he write will appear on your personal space.
