--- a/src/main/webapp/WEB-INF/i18n/messages.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Sun Jan 12 19:55:17 EST 2014
+#Thu Feb 27 15:19:16 EST 2014
 \ =\u7A7A
 ALL_MY_TEAM_CAN_SEE=\u5728\u670B\u53CB\u5708\u5185\u53EF\u89C1
 AddOnName=\u6536\u85CF\u2022\u5206\u4EAB
@@ -125,7 +125,7 @@ security_login_userlicence=\u4E3A\u4EC0\u4E48\u8981\u6CE8\u518C
 security_logout=\u9000\u51FA\u767B\u5F55\u72B6\u6001
 security_signup_message=\u6CE8\u518C\u540E\u6709\u4EC0\u4E48\u597D\u5904?
 security_signup_reason_0=\u6CE8\u518C\u4EE5\u540E\:  
-security_signup_reason_1=1. \u60A8\u5C06\u62E5\u6709\u4E2A\u4EBA\u7684\u7A7A\u95F4http\://ShareTheGoodOnes.com/\u60A8\u6CE8\u518C\u7684\u7528\u6237\u540D
+security_signup_reason_1=1. \u60A8\u5C06\u62E5\u6709\u4E2A\u4EBA\u7684\u7A7A\u95F4http\://cn.ShareTheGoodOnes.com/\u60A8\u6CE8\u518C\u7684\u7528\u6237\u540D
 security_signup_reason_2=2. \u60A8\u53EF\u4EE5\u628A\u60A8\u7684\u4E66\u7B7E\u4FDD\u5B58\u5230\u7F51\u4E0A,\u5E76\u968F\u65F6\u968F\u5730\u4E0E\u60A8\u7684\u5BB6\u4EBA\u670B\u53CB\u4EEC\u5171\u4EAB\u3002
 security_signup_reason_3=3. \u60A8\u8FD8\u80FD\u5199\u65E5\u8BB0, \u968F\u7B14\u6216\u4EFB\u4F55\u5185\u5BB9,\u53EF\u4EE5\u901A\u8FC7\u5BF9\u522B\u4EBA\u5199\u7684\u5185\u5BB9\u6DFB\u52A0\u8BC4\u8BBA\uFF0C\u6216\u901A\u8FC7\u7559\u8A00\u6765\u52A0\u5F3A\u6C9F\u901A\u4EA4\u6D41\u3002
 security_signup_reason_4=4.\u60A8\u53EF\u4EE5\u5BF9\u60A8\u611F\u5174\u8DA3\u7684\u4EBA\u52A0\u5173\u6CE8\uFF08\u53EA\u8981\u5728\u4ED6\u7684\u540D\u5B57\u4E0A\u70B9\u51FB\uFF0C\u7136\u540E\u70B9\uFF0B\u53F7\u5373\u53EF\uFF09\uFF0C\u4E4B\u540E\u6BCF\u5F53\u4ED6\u6DFB\u52A0\u7684\u4E66\u7B7E\u6216\u7B14\u8BB0\uFF0C\u60A8\u7684\u7A7A\u95F4\u4E2D\u5C31\u80FD\u53CA\u65F6\u770B\u5230\u3002
