--- a/src/main/webapp/WEB-INF/i18n/messages.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages.properties
@@ -1,9 +1,10 @@
 #Created by JInto - www.guh-software.de
-#Thu Feb 27 15:19:16 EST 2014
+#Sun Jul 13 13:18:14 EDT 2014
 \ =\u7A7A
 ALL_MY_TEAM_CAN_SEE=\u5728\u670B\u53CB\u5708\u5185\u53EF\u89C1
 AddOnName=\u6536\u85CF\u2022\u5206\u4EAB
-AddOnNotice=\u8BF7\u5C06\u8BE5[\u6536\u85CF\u2022\u5206\u4EAB]\u5FEB\u6377\u5DE5\u5177\u62D6\u5230\u6536\u85CF\u680F\u4E0A\uFF0C\u4EE5\u540E\u5F53\u60A8\u8BBF\u95EE\u7F51\u9875\u65F6\uFF0C\u53EA\u8981\u70B9\u51FB\u5B83\u5C31\u80FD\u65B9\u4FBF\u7684\u6536\u85CF\u5E76\u5171\u4EAB\u4E86\u3002
+AddOnNotice=\u8BF7\u62D6\u653E\u8BE5\u6309\u94AE\u62D6\u5230\u6536\u85CF\u680F\u4E0A\uFF0C\u4EE5\u540E\u8BBF\u95EE\u7F51\u9875\u65F6\uFF0C\u968F\u65F6\u4E00\u70B9,\u6240\u8BBF\u95EE\u7684\u7F51\u9875\u5373\u4F5C\u4E3A\u4E66\u7B7E\u5B58\u5230\u60A8\u7684\u4E2A\u4EBA\u4E3B\u9875\uFF01
+AddOnNotice2=\u8BF7\u62D6\u653E\u8BE5\u6309\u94AE\u62D6\u5230\u6536\u85CF\u680F\u4E0A\uFF0C\u968F\u65F6\u4E00\u70B9\u5373\u5B58\! >>>>
 Big\ Tag=\u7C7B\u522B
 Circle=\u5708\u5B50
 Content=\u5185\u5BB9
@@ -25,7 +26,7 @@ admin_suggested_tag5=\u7948\u7977
 admin_suggested_tag6=\u65E5\u8BB0
 admin_suggested_tag7=\u601D\u60F3
 admin_suggested_tag8=\u7ECF\u9A8C
-agree=\u4E25\u91CD\u540C\u610F\uFF0C\u5F00\u59CB\u6CE8\u518C\uFF01
+agree=\u4E00\u79D2\u949F\u95EA\u7535\u6CE8\u518C\uFF01
 allcontents=\u5168\u90E8\u5185\u5BB9
 button_cancel=\u53D6\u6D88
 button_end=End
@@ -40,11 +41,11 @@ button_send=\u53D1\u9001
 button_showcookie=Show Cookie
 button_showmessage=Show Message
 button_showstacktrace=Show Stack Trace
-button_signup=\u7528\u6237\u6CE8\u518C
+button_signup=\u65B0\u7528\u6237\u6CE8\u518C
 button_submit=\u767B\u5F55
 button_update=Update
-contributeContent=\u65B0\u95FB\uFF0C\u8D44\u6599\uFF0C\u56FE\u50CF\uFF0C\u4E66\u7B7E
-contributeTwitter=\u7948\u7977\uFF0C\u7B14\u8BB0\uFF0C\u5907\u5FD8
+contributeContent=\u6211\u8981\u6536\u85CF\u4E00\u4E2A\u7F51\u9875
+contributeTwitter=\u6211\u8981\u5199\u4E00\u6761\u7B14\u8BB0
 default_welcome_message=\u6B22\u8FCE\u6B22\u8FCE\:]\uFF0C\u5982\u6709\u5E0C\u671B\u6539\u8FDB\u7684\u5730\u65B9\uFF0C\u8BF7\u5230tao\u7684\u7A7A\u95F4\u7559\u8A00\u3002
 doublespace=\  
 entity_create=\u6DFB\u52A0{0}
@@ -111,14 +112,14 @@ list_page=Page {0} of {1}
 list_previous=Previous Page
 list_size=List results per page\:
 public=\u516C\u5171
-publicDescription=\u8DDF\u670B\u53CB\u5206\u4EAB\u6709\u8DA3\u65B0\u95FB\u3001\u5206\u7C7B\u7BA1\u7406\u4E66\u7B7E\u94FE\u63A5\u3001\u56E2\u961F\u534F\u4F5C\u3001\u5EFA\u7ACB\u80FD\u81EA\u52A8\u66F4\u65B0\u7684\u4E2A\u4EBA\u4E3B\u9875\uFF08\u7F51\u5740\u540E\u52A0\u6CE8\u518C\u7528\u6237\u540D\u5C31\u662F\u4E2A\u4EBA\u4E3B\u9875\uFF09\uFF0C\u5C31\u662F\u8FD9\u513F\u4E86\uFF01
+publicDescription=\u672C\u7F51\u7AD9\u662F\u81F4\u529B\u4E8E\u63D0\u9AD8\u4EB2\u53CB\u95F4\u4FE1\u606F\u4F20\u64AD\uFF0C\u4E2A\u4EBA\u77E5\u8BC6\u7BA1\u7406\uFF0C\u56E2\u961F\u5171\u4EAB\u6C9F\u901A\u7684\u516C\u76CA\u7F51\u7AD9\u3002\u53E6\u627F\u63A5\u7F51\u7AD9\u4E1A\u52A1\uFF1Ainfo@sharethegoodones.com
 security_create_unsuccessful=\u8BE5\u7528\u6237\u540D\u5DF2\u7ECF\u88AB\u6CE8\u518C\uFF0C\u8BF7\u9009\u62E9\u65B0\u7684\u7528\u6237\u540D\uFF0C\u518D\u6B21\u5C1D\u8BD5\u3002
 security_login=\u7528\u6237\u767B\u5F55
 security_login_form_name=\u7528\u6237\: 
 security_login_form_name_message=\u8BF7\u5728\u6B64\u8F93\u5165\u7528\u6237\u540D
 security_login_form_password=\u5BC6\u7801\: 
 security_login_form_password_message=\u8BF7\u5728\u6B64\u8BBE\u7F6E\u4E00\u4E2A\u4E0D\u5C11\u4E8E4\u4F4D\u7684\u5BC6\u7801
-security_login_message=\u6CA1\u6709\u7528\u6237\u540D\u548C\u5BC6\u7801\uFF1F\u5FEB\u731B\u51FB\u53F3\u8FB9\u7684\u7A97\u53E3\u7684 [\u4E25\u91CD\u540C\u610F] \u94FE\u63A5\u95EA\u7535\u6CE8\u518C\u5427\uFF01
+security_login_message=\u6CA1\u6709\u7528\u6237\u540D\u548C\u5BC6\u7801\uFF1F\u5FEB\u731B\u51FB\u53F3\u8FB9\u7684\u7A97\u53E3\u7684\u94FE\u63A5\u95EA\u7535\u6CE8\u518C\u5427\uFF01
 security_login_title=\u5DF2\u6CE8\u518C\u7528\u6237\u8BF7\u5728\u6B64\u767B\u5F55
 security_login_unsuccessful=\u4F60\u7684\u767B\u5F55\u8FC7\u7A0B\u672A\u80FD\u6210\u529F, \u8BF7\u67E5\u770B\u539F\u56E0\u540E\u518D\u6B21\u5C1D\u8BD5\u3002\u539F\u56E0\uFF1A 
 security_login_userlicence=\u4E3A\u4EC0\u4E48\u8981\u6CE8\u518C
