--- a/src/main/webapp/WEB-INF/i18n/messages_fr.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages_fr.properties
@@ -1,9 +1,10 @@
 #Created by JInto - www.guh-software.de
-#Thu Feb 27 15:19:15 EST 2014
+#Sun Jul 13 12:59:03 EDT 2014
 \ =EMPTY
 ALL_MY_TEAM_CAN_SEE=visible to my friends
 AddOnName=Save&Share
 AddOnNotice=-
+AddOnNotice2=Drag and Drop this to favorite bar\! >>>>
 Big\ Tag=Cat\u00E9grie
 Circle=Circle
 Content=Content
