--- a/src/main/webapp/WEB-INF/i18n/messages.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages.properties
@@ -1,10 +1,10 @@
 #Created by JInto - www.guh-software.de
-#Sun Jul 13 13:18:14 EDT 2014
+#Mon Jul 14 00:03:03 EDT 2014
 \ =\u7A7A
 ALL_MY_TEAM_CAN_SEE=\u5728\u670B\u53CB\u5708\u5185\u53EF\u89C1
 AddOnName=\u6536\u85CF\u2022\u5206\u4EAB
 AddOnNotice=\u8BF7\u62D6\u653E\u8BE5\u6309\u94AE\u62D6\u5230\u6536\u85CF\u680F\u4E0A\uFF0C\u4EE5\u540E\u8BBF\u95EE\u7F51\u9875\u65F6\uFF0C\u968F\u65F6\u4E00\u70B9,\u6240\u8BBF\u95EE\u7684\u7F51\u9875\u5373\u4F5C\u4E3A\u4E66\u7B7E\u5B58\u5230\u60A8\u7684\u4E2A\u4EBA\u4E3B\u9875\uFF01
-AddOnNotice2=\u8BF7\u62D6\u653E\u8BE5\u6309\u94AE\u62D6\u5230\u6536\u85CF\u680F\u4E0A\uFF0C\u968F\u65F6\u4E00\u70B9\u5373\u5B58\! >>>>
+AddOnNotice2=(\u8BF7\u62D6\u653E\u8BE5\u6309\u94AE\u62D6\u5230\u6536\u85CF\u680F\u4E0A\uFF0C\u968F\u65F6\u4E00\u70B9\u5373\u5B58\! >>>>)
 Big\ Tag=\u7C7B\u522B
 Circle=\u5708\u5B50
 Content=\u5185\u5BB9
