--- a/src/main/webapp/WEB-INF/i18n/messages_en.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages_en.properties
@@ -1,10 +1,10 @@
 #Created by JInto - www.guh-software.de
-#Sun Jul 13 12:57:33 EDT 2014
+#Mon Jul 14 00:03:03 EDT 2014
 \ =EMPTY
 ALL_MY_TEAM_CAN_SEE=Visible Only To My Friends
 AddOnName=Save&Share
 AddOnNotice=Please drag this quick tool to bookmarks bar\! then when you want to save and share a page, you just click it\!
-AddOnNotice2=Drag and Drop this to favorite bar\!\! >>>>
+AddOnNotice2=(Drag and Drop this to favorite bar\!\! >>>>)
 Big\ Tag=Category
 Circle=Circle
 Content=Contents
