so support background use thin image. allow to not have subject image. found that when writing blog, the theme is not correct. the theme bar visible only when visiting public page(when not logged in) and ownpage(when logged in). Strings moved to i18n files

--- a/src/main/webapp/WEB-INF/i18n/messages.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Mon Jul 14 00:03:03 EDT 2014
+#Fri Jul 18 14:55:33 EDT 2014
 \ =\u7A7A
 ALL_MY_TEAM_CAN_SEE=\u5728\u670B\u53CB\u5708\u5185\u53EF\u89C1
 AddOnName=\u6536\u85CF\u2022\u5206\u4EAB
@@ -100,6 +100,7 @@ global_menu_tagsManage=\u7BA1\u7406\u6211\u5B9A\u4E49\u7684\u5206\u7C7B
 global_sponsored=Sponsored by SpringSource
 global_theme=\u754C\u9762\u98CE\u683C
 global_theme_circle=\u5706\u5708
+global_theme_customize=\u6211\u7684\u4E3B\u9898
 global_theme_default=\u9ED8\u8BA4
 global_theme_line=\u7EBF\u6761
 global_theme_sky=\u661F\u7A7A
@@ -134,6 +135,8 @@ security_signup_reason_5=5. \u5BF9\u4E8E\u4E0D\u5E0C\u671B\u522B\u4EBA\u770B\u52
 security_signup_reason_last=\u8BA9\u6211\u4EEC\u4E00\u8D77\u5171\u4EAB\u6536\u85CF\u7684\u597D\u4E1C\u897F\u5427 \:-)
 selenium_menu_test_suite=Test Suite
 twitter_rss_link=\u5F53\u6709\u65B0\u8BC4\u8BBA\u65F6\uFF0C\u8BF7\u53D1\u9001\u5230\u6211\u7684\u90AE\u7BB1\uFF01
+useraccount_update_bg=\u80CC\u666F\u7EB9\u7406\u56FE\u7247
+useraccount_update_headimage=\u4E3B\u9898\u56FE\u7247
 webflow_endstate_message=\u8FD9\u5DF2\u7ECF\u662F\u6700\u540E\u4E86
 webflow_endstate_title=Spring Web Flow - End State
 webflow_menu_enter=\u8F93\u5165{0} flow
