--- a/src/main/webapp/WEB-INF/i18n/messages_en.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages_en.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Mon Jul 14 00:03:03 EDT 2014
+#Fri Jul 18 14:55:33 EDT 2014
 \ =EMPTY
 ALL_MY_TEAM_CAN_SEE=Visible Only To My Friends
 AddOnName=Save&Share
@@ -100,6 +100,7 @@ global_menu_tagsManage=Manage Tags
 global_sponsored=Sponsored by SpringSource
 global_theme=THEME
 global_theme_circle=circles
+global_theme_customize=My Theme
 global_theme_default=default
 global_theme_line=lines
 global_theme_sky=stars
@@ -134,6 +135,8 @@ security_signup_reason_5=5. if you don't want you share your bookmark or the con
 security_signup_reason_last=Let's go \:-)
 selenium_menu_test_suite=Test Suite
 twitter_rss_link=Please sent any new remark of this post to my email\!
+useraccount_update_bg=Background Texture Image
+useraccount_update_headimage=Subject Image
 webflow_endstate_message=You have now reached the end of this flow.
 webflow_endstate_title=Spring Web Flow - End State
 webflow_menu_enter=Enter {0} flow
