if anyone commit image with special words: stgos.com, ,then the size will be kept. made >>> to >>>> fixed the bug when pagenating the blogs, it displays bookmarks.

--- a/src/main/webapp/WEB-INF/i18n/messages_fr.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages_fr.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Fri Jul 18 21:51:28 EDT 2014
+#Fri Jul 18 21:58:00 EDT 2014
 \ =EMPTY
 ALL_MY_TEAM_CAN_SEE=visible to my friends
 AddOnName=Save&Share
@@ -93,7 +93,7 @@ global_menu_new=Create new {0}
 global_menu_newbookmark=Found some thing good? Why not click and share with friends right away\!
 global_menu_newmessage=-
 global_menu_newnote=make a pray? write diary? some experience or thought? it's time to write them down.
-global_menu_readmore=>>>
+global_menu_readmore=>>>>
 global_menu_resetView=Reset To Default
 global_menu_setView=Customize Page Layout
 global_menu_tagsManage=Cr\u00E9er mes cat\u00E9gries
