--- a/src/main/webapp/WEB-INF/i18n/messages.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Fri Jul 18 21:51:48 EDT 2014
+#Fri Jul 18 21:58:00 EDT 2014
 \ =\u7A7A
 ALL_MY_TEAM_CAN_SEE=\u5728\u670B\u53CB\u5708\u5185\u53EF\u89C1
 AddOnName=\u6536\u85CF\u2022\u5206\u4EAB
@@ -93,7 +93,7 @@ global_menu_new=Create new {0}
 global_menu_newbookmark=\u770B\u5230\u6709\u8DA3\u7684\u4E1C\u897F\u4E86\uFF1F\u731B\u51FB\u8FD9\u91CC\u8DDF\u670B\u53CB\u5BB6\u4EBA\u5206\u4EAB\uFF01\u5171\u540C\u7684\u8BDD\u9898\u6C38\u8FDC\u662F\u5BB6\u4EBA\u670B\u53CB\u6240\u559C\u7231\u7684\u3002
 global_menu_newmessage=\u7ED9\u7A7A\u95F4\u4E3B\u4EBA\u7559\u4E2A\u8A00\uFF1F\u6CA1\u95EE\u9898\uFF0C\u5982\u679C\u4E0D\u60F3\u8BA9\u522B\u4EBA\u770B\u5230\uFF0C\u8BF7\u8BB0\u5F97\u4FDD\u5B58\u524D\u8BBE\u7F6E\u6210\u201C\u4EC5\u5BF9\u7A7A\u95F4\u4E3B\u4EBA\u53EF\u89C1\u201D\u3002
 global_menu_newnote=\u60F3\u505A\u4E2A\u7948\u7977\uFF0C\u8BB0\u4E2A\u65E5\u5FD7\uFF0C\u8868\u8FBE\u60F3\u6CD5\uFF0C\u603B\u7ED3\u7ECF\u9A8C\uFF1F\u5199\u4E0B\u6765\uFF0C\u8BA9\u5BB6\u4EBA\u4E86\u89E3\uFF0C\u8BA9\u5C81\u6708\u89C1\u8BC1\uFF01
-global_menu_readmore=>>>
+global_menu_readmore=>>>>
 global_menu_resetView=\u6062\u590D\u5230\u9ED8\u8BA4\u8BBE\u7F6E
 global_menu_setView=\u81EA\u5B9A\u4E49\u9875\u9762\u5E03\u5C40
 global_menu_tagsManage=\u7BA1\u7406\u6211\u5B9A\u4E49\u7684\u5206\u7C7B
