--- a/src/main/webapp/WEB-INF/i18n/messages_en.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages_en.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Fri Jul 18 21:51:28 EDT 2014
+#Fri Jul 18 21:58:00 EDT 2014
 \ =EMPTY
 ALL_MY_TEAM_CAN_SEE=Visible Only To My Friends
 AddOnName=Save&Share
@@ -93,7 +93,7 @@ global_menu_new=Create new {0}
 global_menu_newbookmark=Found some thing good? Why not share with friends right away\! 
 global_menu_newmessage=Message to owner? Good idea\! If you don't want others to see, please set as private.
 global_menu_newnote=Say a prayer? Write diary? Record an experience or thought? it's time to share them down.
-global_menu_readmore=>>>
+global_menu_readmore=>>>>
 global_menu_resetView=Reset To Default
 global_menu_setView=Customize Page Layout
 global_menu_tagsManage=Manage Tags
