added new default theme. moved the old default to the fourth, removed the lines theme.

--- a/src/main/webapp/WEB-INF/i18n/messages.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Fri Jul 18 21:58:00 EDT 2014
+#Sun Sep 21 14:09:32 EDT 2014
 \ =\u7A7A
 ALL_MY_TEAM_CAN_SEE=\u5728\u670B\u53CB\u5708\u5185\u53EF\u89C1
 AddOnName=\u6536\u85CF\u2022\u5206\u4EAB
@@ -99,10 +99,10 @@ global_menu_setView=\u81EA\u5B9A\u4E49\u9875\u9762\u5E03\u5C40
 global_menu_tagsManage=\u7BA1\u7406\u6211\u5B9A\u4E49\u7684\u5206\u7C7B
 global_sponsored=Sponsored by SpringSource
 global_theme=\u754C\u9762\u98CE\u683C
+global_theme_cements=\u6C34\u6CE5
 global_theme_circle=\u4E91\u6735
 global_theme_customize=\u6211\u7684\u4E3B\u9898
 global_theme_default=\u9ED8\u8BA4
-global_theme_line=\u7EBF\u6761
 global_theme_sky=\u661F\u7A7A
 global_theme_spot=\u6591\u70B9
 global_theme_stone=\u77F3\u5934
