--- a/src/main/webapp/WEB-INF/i18n/messages_en.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages_en.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Fri Jul 18 21:58:00 EDT 2014
+#Sun Sep 21 14:09:32 EDT 2014
 \ =EMPTY
 ALL_MY_TEAM_CAN_SEE=Visible Only To My Friends
 AddOnName=Save&Share
@@ -99,10 +99,10 @@ global_menu_setView=Customize Page Layout
 global_menu_tagsManage=Manage Tags
 global_sponsored=Sponsored by SpringSource
 global_theme=THEME
+global_theme_cements=cements
 global_theme_circle=cloud
 global_theme_customize=My Theme
 global_theme_default=default
-global_theme_line=lines
 global_theme_sky=stars
 global_theme_spot=spots
 global_theme_stone=stones
