modified some variable name in resource file, to make it more readable. also created _cn files, so the default file do not need to be _cn file any more, it can be replaced with any language version of resouce file now.

--- a/src/main/webapp/WEB-INF/i18n/application_cn.properties
+++ b/src/main/webapp/WEB-INF/i18n/application_cn.properties
@@ -1,8 +1,8 @@
-#Created by JInto - www.guh-software.de
-#Wed Sep 07 09:45:08 EDT 2016
+#Updated at Mon Jan 13 22:51:27 EST 2014
+#Mon Jan 13 22:51:27 EST 2014
 application_name=Bigbang
 label_com_aeiou_bigbang_domain_bigtag=Big Tag
-label_com_aeiou_bigbang_domain_bigtag_authority=visible to who?
+label_com_aeiou_bigbang_domain_bigtag_authority=\u8C01\u53EF\u4EE5\u770B\u89C1
 label_com_aeiou_bigbang_domain_bigtag_commontagname=Common Tag Name
 label_com_aeiou_bigbang_domain_bigtag_contentid=Content I D
 label_com_aeiou_bigbang_domain_bigtag_contenttitle=Content Title
@@ -19,7 +19,7 @@ label_com_aeiou_bigbang_domain_bigtag_version=Version
 label_com_aeiou_bigbang_domain_circle=Circle
 label_com_aeiou_bigbang_domain_circle_circlename=Circle Name
 label_com_aeiou_bigbang_domain_circle_createddate=Created Date
-label_com_aeiou_bigbang_domain_circle_description=description
+label_com_aeiou_bigbang_domain_circle_description=\u8BF4\u660E
 label_com_aeiou_bigbang_domain_circle_id=Id
 label_com_aeiou_bigbang_domain_circle_members=Members
 label_com_aeiou_bigbang_domain_circle_owner=Owner
@@ -27,7 +27,7 @@ label_com_aeiou_bigbang_domain_circle_plural=Circles
 label_com_aeiou_bigbang_domain_circle_version=Version
 label_com_aeiou_bigbang_domain_content=Content
 label_com_aeiou_bigbang_domain_content_addingtagflag=Adding Tag Flag
-label_com_aeiou_bigbang_domain_content_authority=visible to who
+label_com_aeiou_bigbang_domain_content_authority=\u8C01\u53EF\u4EE5\u770B\u89C1
 label_com_aeiou_bigbang_domain_content_commonbigtag=\u516C\u5171\u7A7A\u95F4\u6807\u7B7E *
 label_com_aeiou_bigbang_domain_content_conentcache=\u7F51\u9875\u5185\u5BB9\u62F7\u8D1D
 label_com_aeiou_bigbang_domain_content_id=Id
