--- a/src/main/webapp/WEB-INF/i18n/messages_fr.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages_fr.properties
@@ -1,11 +1,11 @@
 #Created by JInto - www.guh-software.de
-#Sun Sep 21 14:09:32 EDT 2014
+#Tue Sep 13 22:37:57 EDT 2016
 \ =EMPTY
 ALL_MY_TEAM_CAN_SEE=visible to my friends
-AddOnName=Save&Share
 AddOnNotice=-
 AddOnNotice2=(Drag and Drop this to favorite bar\! >>>>)
 Big\ Tag=Cat\u00E9grie
+Btn_Booklet=Save&Share
 Circle=Circle
 Content=Content
 Customize=-
