--- a/src/main/webapp/WEB-INF/i18n/application_fr.properties
+++ b/src/main/webapp/WEB-INF/i18n/application_fr.properties
@@ -1,9 +1,10 @@
 #Created by JInto - www.guh-software.de
-#Thu Aug 15 12:28:16 EDT 2013
+#Wed Sep 07 09:45:08 EDT 2016
 application_name=Bigbang
 label_com_aeiou_bigbang_domain_bigtag=Big Tag
 label_com_aeiou_bigbang_domain_bigtag_authority=Authority
 label_com_aeiou_bigbang_domain_bigtag_commontagname=
+label_com_aeiou_bigbang_domain_bigtag_contentid=
 label_com_aeiou_bigbang_domain_bigtag_contenttitle=
 label_com_aeiou_bigbang_domain_bigtag_contenturl=
 label_com_aeiou_bigbang_domain_bigtag_id=Id
@@ -11,6 +12,7 @@ label_com_aeiou_bigbang_domain_bigtag_owner=Type
 label_com_aeiou_bigbang_domain_bigtag_plural=Big Tags
 label_com_aeiou_bigbang_domain_bigtag_tagname=Tag Name
 label_com_aeiou_bigbang_domain_bigtag_twittercontent=
+label_com_aeiou_bigbang_domain_bigtag_twitterid=
 label_com_aeiou_bigbang_domain_bigtag_twittertitle=
 label_com_aeiou_bigbang_domain_bigtag_type=Owner Name
 label_com_aeiou_bigbang_domain_bigtag_version=Version
@@ -60,6 +62,7 @@ label_com_aeiou_bigbang_domain_remark_id=Id
 label_com_aeiou_bigbang_domain_remark_plural=Remarks
 label_com_aeiou_bigbang_domain_remark_privilege=Privilege
 label_com_aeiou_bigbang_domain_remark_publisher=Publisher
+label_com_aeiou_bigbang_domain_remark_refresh_time=
 label_com_aeiou_bigbang_domain_remark_remarktime=Remark Time
 label_com_aeiou_bigbang_domain_remark_remarkto=Remarkto
 label_com_aeiou_bigbang_domain_remark_remarttime=Remart Time
