--- a/src/main/webapp/WEB-INF/i18n/messages_cn.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages_cn.properties
@@ -1,11 +1,11 @@
 #Created by JInto - www.guh-software.de
-#Tue Sep 13 22:37:57 EDT 2016
+#Sun Sep 21 14:09:32 EDT 2014
 \ =\u7A7A
 ALL_MY_TEAM_CAN_SEE=\u5728\u670B\u53CB\u5708\u5185\u53EF\u89C1
-AddOnNotice=drag and drop to favorate bar, then when you see a present web page\uFF0Cjust click the button to tell santa\uFF01
-AddOnNotice2=(drag and drop me to favorate bar\uFF0Cthen click me to tell Santa\! >>>>)
+AddOnName=\u6536\u85CF\u2022\u5206\u4EAB
+AddOnNotice=\u8BF7\u62D6\u653E\u8BE5\u6309\u94AE\u62D6\u5230\u6536\u85CF\u680F\u4E0A\uFF0C\u4EE5\u540E\u8BBF\u95EE\u7F51\u9875\u65F6\uFF0C\u968F\u65F6\u4E00\u70B9,\u6240\u8BBF\u95EE\u7684\u7F51\u9875\u5373\u4F5C\u4E3A\u4E66\u7B7E\u5B58\u5230\u60A8\u7684\u4E2A\u4EBA\u4E3B\u9875\uFF01
+AddOnNotice2=(\u8BF7\u62D6\u653E\u8BE5\u6309\u94AE\u62D6\u5230\u6536\u85CF\u680F\u4E0A\uFF0C\u968F\u65F6\u4E00\u70B9\u5373\u5B58\! >>>>)
 Big\ Tag=\u7C7B\u522B
-Btn_Booklet=\u6536\u85CF\u2022\u5206\u4EAB
 Circle=\u5708\u5B50
 Content=\u5185\u5BB9
 Customize=\u81EA\u5B9A\u4E49
@@ -26,7 +26,7 @@ admin_suggested_tag5=\u7948\u7977
 admin_suggested_tag6=\u65E5\u8BB0
 admin_suggested_tag7=\u601D\u60F3
 admin_suggested_tag8=\u7ECF\u9A8C
-agree=Let Santa know you\uFF01
+agree=\u4E00\u79D2\u949F\u95EA\u7535\u6CE8\u518C\uFF01
 allcontents=\u5168\u90E8\u5185\u5BB9
 button_cancel=\u53D6\u6D88
 button_end=End
@@ -41,11 +41,11 @@ button_send=\u53D1\u9001
 button_showcookie=Show Cookie
 button_showmessage=Show Message
 button_showstacktrace=Show Stack Trace
-button_signup=\u65B0\u7528\u6237
-button_submit=\u8FDB\u5165
+button_signup=\u65B0\u7528\u6237\u6CE8\u518C
+button_submit=\u767B\u5F55
 button_update=Update
-contributeContent=I found what I like\!
-contributeTwitter=I want to write a wish\!
+contributeContent=\u6211\u8981\u6536\u85CF\u4E00\u4E2A\u7F51\u9875
+contributeTwitter=\u6211\u8981\u5199\u4E00\u6761\u7B14\u8BB0
 default_welcome_message=\u6B22\u8FCE\u6B22\u8FCE\:]\uFF0C\u5982\u6709\u5E0C\u671B\u6539\u8FDB\u7684\u5730\u65B9\uFF0C\u8BF7\u5230tao\u7684\u7A7A\u95F4\u7559\u8A00\u3002
 doublespace=\  
 entity_create=\u6DFB\u52A0{0}
