--- a/src/main/webapp/WEB-INF/i18n/messages_en.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages_en.properties
@@ -1,11 +1,11 @@
 #Created by JInto - www.guh-software.de
-#Sun Sep 21 14:09:32 EDT 2014
+#Tue Sep 13 22:37:57 EDT 2016
 \ =EMPTY
 ALL_MY_TEAM_CAN_SEE=Visible Only To My Friends
-AddOnName=Save&Share
 AddOnNotice=Please drag this quick tool to bookmarks bar\! then when you want to save and share a page, you just click it\!
-AddOnNotice2=(Drag and Drop this to favorite bar\!\! >>>>)
+AddOnNotice2=(Drag and Drop to favorite bar\!\! >>>>)
 Big\ Tag=Category
+Btn_Booklet=Save&Share
 Circle=Circle
 Content=Contents
 Customize=Customize
