added a new column "useraccount" into customizes table with Roo.

--- a/src/main/webapp/WEB-INF/i18n/application.properties
+++ b/src/main/webapp/WEB-INF/i18n/application.properties
@@ -1,5 +1,5 @@
-#Created by JInto - www.guh-software.de
-#Wed Sep 07 09:45:08 EDT 2016
+#Updated at Thu Sep 15 11:37:12 EDT 2016
+#Thu Sep 15 11:37:12 EDT 2016
 application_name=Bigbang
 label_com_aeiou_bigbang_domain_bigtag=Big Tag
 label_com_aeiou_bigbang_domain_bigtag_authority=visible to who?
@@ -43,6 +43,7 @@ label_com_aeiou_bigbang_domain_customize_cuskey=Cus Key
 label_com_aeiou_bigbang_domain_customize_cusvalue=Cus Value
 label_com_aeiou_bigbang_domain_customize_id=Id
 label_com_aeiou_bigbang_domain_customize_plural=Customizes
+label_com_aeiou_bigbang_domain_customize_useraccount=Useraccount
 label_com_aeiou_bigbang_domain_customize_version=Version
 label_com_aeiou_bigbang_domain_customizes_commonTag=\u516C\u5171\u7A7A\u95F4\u6807\u7B7E
 label_com_aeiou_bigbang_domain_message=\u7ED9{0}\u7559\u8A00
