so when updating (this happen only when first open the page, or change the langue.) we update all customizes of admin's, then partially cover it with owner's customise. now the cuskey is not unique id anymore, so we should control from webpage to make sure one person don't have two same customize key.

--- a/src/main/webapp/WEB-INF/i18n/messages.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Tue Sep 13 22:37:57 EDT 2016
+#Sat Sep 17 23:35:18 EDT 2016
 \ =\u7A7A
 ALL_MY_TEAM_CAN_SEE=\u5728\u670B\u53CB\u5708\u5185\u53EF\u89C1
 AddOnNotice=drag and drop to favorate bar, then when you see a present web page\uFF0Cjust click the button to tell santa\uFF01
@@ -54,7 +54,7 @@ entity_delete_confirm=\u60A8\u786E\u5B9A\u8981\u5220\u9664?
 entity_dependency_required=The following dependencies need to be created first\:
 entity_find=Find {0}
 entity_list_all=List all {0}
-entity_not_found=\u6CA1\u6709\u627E\u5230\u4EFB\u4F55\u201D{0}\u201C\u7C7B\u8BB0\u5F55\u3002
+entity_not_found=\u8FD8\u6CA1\u6709\u201D{0}\u201C
 entity_not_found_single=No {0} found with this id.
 entity_reference_not_managed=This relationship is managed from the {0} side.
 entity_show=Show {0}
