--- a/src/main/webapp/WEB-INF/i18n/messages_en.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages_en.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Tue Sep 13 22:37:57 EDT 2016
+#Sat Sep 17 23:07:22 EDT 2016
 \ =EMPTY
 ALL_MY_TEAM_CAN_SEE=Visible Only To My Friends
 AddOnNotice=Please drag this quick tool to bookmarks bar\! then when you want to save and share a page, you just click it\!
@@ -54,7 +54,7 @@ entity_delete_confirm=Are you sure to delete this item?
 entity_dependency_required=The following dependencies need to be created first\:
 entity_find=Find {0}
 entity_list_all=List all {0}
-entity_not_found=No {0} found.
+entity_not_found=No {0} yet
 entity_not_found_single=No {0} found with this id.
 entity_reference_not_managed=This relationship is managed from the {0} side.
 entity_show=Show {0}
