removed the "space" from resource, don't want user to have too many accept. moved description of sign up to customizes

--- a/src/main/webapp/WEB-INF/i18n/application_en.properties
+++ b/src/main/webapp/WEB-INF/i18n/application_en.properties
@@ -1,6 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Wed Sep 07 09:45:08 EDT 2016
-application_name=Bigbang
+#Fri Oct 21 15:28:03 EDT 2016
 label_com_aeiou_bigbang_domain_bigtag=Big Tag
 label_com_aeiou_bigbang_domain_bigtag_authority=Authority
 label_com_aeiou_bigbang_domain_bigtag_commontagname=
@@ -28,7 +27,7 @@ label_com_aeiou_bigbang_domain_circle_version=Version
 label_com_aeiou_bigbang_domain_content=Content
 label_com_aeiou_bigbang_domain_content_addingtagflag=
 label_com_aeiou_bigbang_domain_content_authority=Who Can See
-label_com_aeiou_bigbang_domain_content_commonbigtag=Main Category Tag*
+label_com_aeiou_bigbang_domain_content_commonbigtag=Common Tag*
 label_com_aeiou_bigbang_domain_content_conentcache=Copy The Content Here
 label_com_aeiou_bigbang_domain_content_id=Id
 label_com_aeiou_bigbang_domain_content_markdate=When Shared
@@ -36,15 +35,16 @@ label_com_aeiou_bigbang_domain_content_plural=Contents
 label_com_aeiou_bigbang_domain_content_publisher=Sharer
 label_com_aeiou_bigbang_domain_content_sourceurl=Source URL *
 label_com_aeiou_bigbang_domain_content_title=Title *
-label_com_aeiou_bigbang_domain_content_uncommonbigtag=Your Category Tag
+label_com_aeiou_bigbang_domain_content_uncommonbigtag=Personal Tag
 label_com_aeiou_bigbang_domain_content_version=Version
 label_com_aeiou_bigbang_domain_customize=Customize
 label_com_aeiou_bigbang_domain_customize_cuskey=Cus Key
 label_com_aeiou_bigbang_domain_customize_cusvalue=Cus Value
 label_com_aeiou_bigbang_domain_customize_id=Id
 label_com_aeiou_bigbang_domain_customize_plural=Customizes
+label_com_aeiou_bigbang_domain_customize_useraccount=
 label_com_aeiou_bigbang_domain_customize_version=Version
-label_com_aeiou_bigbang_domain_customizes_commonTag=Main Category Tag
+label_com_aeiou_bigbang_domain_customizes_commonTag=Common Tag
 label_com_aeiou_bigbang_domain_message=Leave message to {0}
 label_com_aeiou_bigbang_domain_message_content=Content
 label_com_aeiou_bigbang_domain_message_id=Id
@@ -97,9 +97,9 @@ label_com_aeiou_bigbang_domain_useraccount_price=Expected Salary
 label_com_aeiou_bigbang_domain_useraccount_status=Status
 label_com_aeiou_bigbang_domain_useraccount_theme=THEME
 label_com_aeiou_bigbang_domain_useraccount_version=Version
-label_com_aeiou_bigbang_personalspace=Personal Space
+label_com_aeiou_bigbang_personalspace=Personal Tag
 label_com_aeiou_bigbang_privacyLevel=Privacy Level
-label_com_aeiou_bigbang_publicspace=Public Space
+label_com_aeiou_bigbang_publicspace=Common Tag
 label_com_aeiou_bigbang_publisher=Sharer
 label_com_aeiou_bigbang_title=Title
 label_public_balance=Achievement\: {0} Golden Coint
