--- a/src/main/webapp/WEB-INF/i18n/application.properties
+++ b/src/main/webapp/WEB-INF/i18n/application.properties
@@ -1,6 +1,5 @@
-#Updated at Thu Sep 15 11:37:12 EDT 2016
-#Thu Sep 15 11:37:12 EDT 2016
-application_name=Bigbang
+#Created by JInto - www.guh-software.de
+#Fri Oct 21 15:28:03 EDT 2016
 label_com_aeiou_bigbang_domain_bigtag=Big Tag
 label_com_aeiou_bigbang_domain_bigtag_authority=visible to who?
 label_com_aeiou_bigbang_domain_bigtag_commontagname=Common Tag Name
@@ -28,7 +27,7 @@ label_com_aeiou_bigbang_domain_circle_version=Version
 label_com_aeiou_bigbang_domain_content=Content
 label_com_aeiou_bigbang_domain_content_addingtagflag=Adding Tag Flag
 label_com_aeiou_bigbang_domain_content_authority=visible to who
-label_com_aeiou_bigbang_domain_content_commonbigtag=\u516C\u5171\u7A7A\u95F4\u6807\u7B7E *
+label_com_aeiou_bigbang_domain_content_commonbigtag=\u516C\u5171\u6807\u7B7E *
 label_com_aeiou_bigbang_domain_content_conentcache=\u7F51\u9875\u5185\u5BB9\u62F7\u8D1D
 label_com_aeiou_bigbang_domain_content_id=Id
 label_com_aeiou_bigbang_domain_content_markdate=\u6536\u85CF\u65F6\u95F4
@@ -36,7 +35,7 @@ label_com_aeiou_bigbang_domain_content_plural=Contents
 label_com_aeiou_bigbang_domain_content_publisher=\u91C7\u7F16
 label_com_aeiou_bigbang_domain_content_sourceurl=\u6E90\u7F51\u9875\u7684\u5730\u5740 *
 label_com_aeiou_bigbang_domain_content_title=\u7F51\u9875\u5185\u5BB9\u6807\u9898 *
-label_com_aeiou_bigbang_domain_content_uncommonbigtag=\u4E2A\u4EBA\u7A7A\u95F4\u6807\u7B7E
+label_com_aeiou_bigbang_domain_content_uncommonbigtag=\u4E2A\u6027\u6807\u7B7E
 label_com_aeiou_bigbang_domain_content_version=Version
 label_com_aeiou_bigbang_domain_customize=Customize
 label_com_aeiou_bigbang_domain_customize_cuskey=Cus Key
@@ -45,7 +44,7 @@ label_com_aeiou_bigbang_domain_customize_id=Id
 label_com_aeiou_bigbang_domain_customize_plural=Customizes
 label_com_aeiou_bigbang_domain_customize_useraccount=Useraccount
 label_com_aeiou_bigbang_domain_customize_version=Version
-label_com_aeiou_bigbang_domain_customizes_commonTag=\u516C\u5171\u7A7A\u95F4\u6807\u7B7E
+label_com_aeiou_bigbang_domain_customizes_commonTag=\u516C\u5171\u6807\u7B7E
 label_com_aeiou_bigbang_domain_message=\u7ED9{0}\u7559\u8A00
 label_com_aeiou_bigbang_domain_message_content=\u5185\u5BB9
 label_com_aeiou_bigbang_domain_message_id=Id
@@ -98,9 +97,9 @@ label_com_aeiou_bigbang_domain_useraccount_price=\u6708\u85AA
 label_com_aeiou_bigbang_domain_useraccount_status=\u72B6\u6001
 label_com_aeiou_bigbang_domain_useraccount_theme=\u4E3B\u9898
 label_com_aeiou_bigbang_domain_useraccount_version=Version
-label_com_aeiou_bigbang_personalspace=\u4E2A\u4EBA\u7A7A\u95F4
+label_com_aeiou_bigbang_personalspace=\u4E2A\u6027\u6807\u7B7E
 label_com_aeiou_bigbang_privacyLevel=\u5B89\u5168\u7B49\u7EA7
-label_com_aeiou_bigbang_publicspace=\u516C\u5171\u7A7A\u95F4
+label_com_aeiou_bigbang_publicspace=\u516C\u5171\u6807\u7B7E
 label_com_aeiou_bigbang_publisher=\u91C7\u7F16
 label_com_aeiou_bigbang_title=\u6807\u9898
 label_public_balance=\u7D2F\u79EF\uFF1A{0}\u91D1\u5E01
