implemented the new layout --- (partial commit)

--- a/src/main/webapp/WEB-INF/i18n/application.properties
+++ b/src/main/webapp/WEB-INF/i18n/application.properties
@@ -1,5 +1,5 @@
-#Created by JInto - www.guh-software.de
-#Fri Oct 21 15:28:03 EDT 2016
+#Updated at Tue Nov 08 23:15:31 EST 2016
+#Tue Nov 08 23:15:31 EST 2016
 label_com_aeiou_bigbang_domain_bigtag=Big Tag
 label_com_aeiou_bigbang_domain_bigtag_authority=visible to who?
 label_com_aeiou_bigbang_domain_bigtag_commontagname=Common Tag Name
@@ -91,6 +91,7 @@ label_com_aeiou_bigbang_domain_useraccount_layout=Layout
 label_com_aeiou_bigbang_domain_useraccount_listento=\u96C7\u7528\u5458\u5DE5
 label_com_aeiou_bigbang_domain_useraccount_name=\u540D\u5B57 *
 label_com_aeiou_bigbang_domain_useraccount_newmessageamount=-\u65B0\u7559\u8A00\u6570\u76EE
+label_com_aeiou_bigbang_domain_useraccount_notelayout=Note Layout
 label_com_aeiou_bigbang_domain_useraccount_password=\u5BC6\u7801 *
 label_com_aeiou_bigbang_domain_useraccount_plural=User Accounts
 label_com_aeiou_bigbang_domain_useraccount_price=\u6708\u85AA
