implemented the new layout --- (fixed bugs)

--- a/src/main/webapp/WEB-INF/i18n/application.properties
+++ b/src/main/webapp/WEB-INF/i18n/application.properties
@@ -1,5 +1,5 @@
-#Updated at Tue Nov 08 23:15:31 EST 2016
-#Tue Nov 08 23:15:31 EST 2016
+#Created by JInto - www.guh-software.de
+#Sat Nov 12 21:44:58 EST 2016
 label_com_aeiou_bigbang_domain_bigtag=Big Tag
 label_com_aeiou_bigbang_domain_bigtag_authority=visible to who?
 label_com_aeiou_bigbang_domain_bigtag_commontagname=Common Tag Name
@@ -35,7 +35,7 @@ label_com_aeiou_bigbang_domain_content_plural=Contents
 label_com_aeiou_bigbang_domain_content_publisher=\u91C7\u7F16
 label_com_aeiou_bigbang_domain_content_sourceurl=\u6E90\u7F51\u9875\u7684\u5730\u5740 *
 label_com_aeiou_bigbang_domain_content_title=\u7F51\u9875\u5185\u5BB9\u6807\u9898 *
-label_com_aeiou_bigbang_domain_content_uncommonbigtag=\u4E2A\u6027\u6807\u7B7E
+label_com_aeiou_bigbang_domain_content_uncommonbigtag=\u7C7B\u522B*
 label_com_aeiou_bigbang_domain_content_version=Version
 label_com_aeiou_bigbang_domain_customize=Customize
 label_com_aeiou_bigbang_domain_customize_cuskey=Cus Key
@@ -98,7 +98,7 @@ label_com_aeiou_bigbang_domain_useraccount_price=\u6708\u85AA
 label_com_aeiou_bigbang_domain_useraccount_status=\u72B6\u6001
 label_com_aeiou_bigbang_domain_useraccount_theme=\u4E3B\u9898
 label_com_aeiou_bigbang_domain_useraccount_version=Version
-label_com_aeiou_bigbang_personalspace=\u4E2A\u6027\u6807\u7B7E
+label_com_aeiou_bigbang_personalspace=\u7C7B\u522B
 label_com_aeiou_bigbang_privacyLevel=\u5B89\u5168\u7B49\u7EA7
 label_com_aeiou_bigbang_publicspace=\u516C\u5171\u6807\u7B7E
 label_com_aeiou_bigbang_publisher=\u91C7\u7F16
