--- a/src/main/webapp/WEB-INF/i18n/application_cn.properties
+++ b/src/main/webapp/WEB-INF/i18n/application_cn.properties
@@ -67,7 +67,7 @@ label_com_aeiou_bigbang_domain_remark_remarkto=Remarkto
 label_com_aeiou_bigbang_domain_remark_remarttime=Remart Time
 label_com_aeiou_bigbang_domain_remark_replyto=Reply To
 label_com_aeiou_bigbang_domain_remark_version=Version
-label_com_aeiou_bigbang_domain_twitter=Twitter
+label_com_aeiou_bigbang_domain_twitter=\u7B14\u8BB0
 label_com_aeiou_bigbang_domain_twitter_addingtagflag=Adding Tag Flag
 label_com_aeiou_bigbang_domain_twitter_authority=\u8C01\u53EF\u4EE5\u770B\u89C1
 label_com_aeiou_bigbang_domain_twitter_id=Id
