--- a/src/main/webapp/WEB-INF/i18n/application_en.properties
+++ b/src/main/webapp/WEB-INF/i18n/application_en.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Fri Oct 21 15:28:03 EDT 2016
+#Sat Nov 12 21:44:58 EST 2016
 label_com_aeiou_bigbang_domain_bigtag=Big Tag
 label_com_aeiou_bigbang_domain_bigtag_authority=Authority
 label_com_aeiou_bigbang_domain_bigtag_commontagname=
@@ -35,7 +35,7 @@ label_com_aeiou_bigbang_domain_content_plural=Contents
 label_com_aeiou_bigbang_domain_content_publisher=Sharer
 label_com_aeiou_bigbang_domain_content_sourceurl=Source URL *
 label_com_aeiou_bigbang_domain_content_title=Title *
-label_com_aeiou_bigbang_domain_content_uncommonbigtag=Personal Tag
+label_com_aeiou_bigbang_domain_content_uncommonbigtag=Category*
 label_com_aeiou_bigbang_domain_content_version=Version
 label_com_aeiou_bigbang_domain_customize=Customize
 label_com_aeiou_bigbang_domain_customize_cuskey=Cus Key
@@ -91,13 +91,14 @@ label_com_aeiou_bigbang_domain_useraccount_layout=Layout
 label_com_aeiou_bigbang_domain_useraccount_listento=Employee
 label_com_aeiou_bigbang_domain_useraccount_name=Name *
 label_com_aeiou_bigbang_domain_useraccount_newmessageamount=New Message Amount
+label_com_aeiou_bigbang_domain_useraccount_notelayout=
 label_com_aeiou_bigbang_domain_useraccount_password=Password *
 label_com_aeiou_bigbang_domain_useraccount_plural=User Accounts
 label_com_aeiou_bigbang_domain_useraccount_price=Expected Salary
 label_com_aeiou_bigbang_domain_useraccount_status=Status
 label_com_aeiou_bigbang_domain_useraccount_theme=THEME
 label_com_aeiou_bigbang_domain_useraccount_version=Version
-label_com_aeiou_bigbang_personalspace=Personal Tag
+label_com_aeiou_bigbang_personalspace=Category
 label_com_aeiou_bigbang_privacyLevel=Privacy Level
 label_com_aeiou_bigbang_publicspace=Common Tag
 label_com_aeiou_bigbang_publisher=Sharer
