all know bugs fixed.(just I hope;)

--- a/src/main/webapp/WEB-INF/i18n/application.properties
+++ b/src/main/webapp/WEB-INF/i18n/application.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Sat Nov 12 21:44:58 EST 2016
+#Thu Nov 17 23:29:54 EST 2016
 label_com_aeiou_bigbang_domain_bigtag=Big Tag
 label_com_aeiou_bigbang_domain_bigtag_authority=visible to who?
 label_com_aeiou_bigbang_domain_bigtag_commontagname=Common Tag Name
@@ -35,7 +35,7 @@ label_com_aeiou_bigbang_domain_content_plural=Contents
 label_com_aeiou_bigbang_domain_content_publisher=\u91C7\u7F16
 label_com_aeiou_bigbang_domain_content_sourceurl=\u6E90\u7F51\u9875\u7684\u5730\u5740 *
 label_com_aeiou_bigbang_domain_content_title=\u7F51\u9875\u5185\u5BB9\u6807\u9898 *
-label_com_aeiou_bigbang_domain_content_uncommonbigtag=\u7C7B\u522B*
+label_com_aeiou_bigbang_domain_content_uncommonbigtag=\u6536\u85CF\u7C7B\u522B
 label_com_aeiou_bigbang_domain_content_version=Version
 label_com_aeiou_bigbang_domain_customize=Customize
 label_com_aeiou_bigbang_domain_customize_cuskey=Cus Key
@@ -44,7 +44,7 @@ label_com_aeiou_bigbang_domain_customize_id=Id
 label_com_aeiou_bigbang_domain_customize_plural=Customizes
 label_com_aeiou_bigbang_domain_customize_useraccount=Useraccount
 label_com_aeiou_bigbang_domain_customize_version=Version
-label_com_aeiou_bigbang_domain_customizes_commonTag=\u516C\u5171\u6807\u7B7E
+label_com_aeiou_bigbang_domain_customizes_commonTag=\u7B14\u8BB0\u7C7B\u522B
 label_com_aeiou_bigbang_domain_message=\u7ED9{0}\u7559\u8A00
 label_com_aeiou_bigbang_domain_message_content=\u5185\u5BB9
 label_com_aeiou_bigbang_domain_message_id=Id
