--- a/src/main/webapp/WEB-INF/i18n/application_fr.properties
+++ b/src/main/webapp/WEB-INF/i18n/application_fr.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Sat Nov 12 21:44:58 EST 2016
+#Thu Nov 17 23:29:54 EST 2016
 label_com_aeiou_bigbang_domain_bigtag=Big Tag
 label_com_aeiou_bigbang_domain_bigtag_authority=Authority
 label_com_aeiou_bigbang_domain_bigtag_commontagname=
@@ -35,7 +35,7 @@ label_com_aeiou_bigbang_domain_content_plural=Contents
 label_com_aeiou_bigbang_domain_content_publisher=Publisher
 label_com_aeiou_bigbang_domain_content_sourceurl=Source URL *
 label_com_aeiou_bigbang_domain_content_title=Title *
-label_com_aeiou_bigbang_domain_content_uncommonbigtag=Category*
+label_com_aeiou_bigbang_domain_content_uncommonbigtag=BookMark Category
 label_com_aeiou_bigbang_domain_content_version=Version
 label_com_aeiou_bigbang_domain_customize=Customize
 label_com_aeiou_bigbang_domain_customize_cuskey=Cus Key
@@ -44,7 +44,7 @@ label_com_aeiou_bigbang_domain_customize_id=Id
 label_com_aeiou_bigbang_domain_customize_plural=Customizes
 label_com_aeiou_bigbang_domain_customize_useraccount=
 label_com_aeiou_bigbang_domain_customize_version=Version
-label_com_aeiou_bigbang_domain_customizes_commonTag=Main Category Tag
+label_com_aeiou_bigbang_domain_customizes_commonTag=Note Category
 label_com_aeiou_bigbang_domain_message=Leave message to {0}
 label_com_aeiou_bigbang_domain_message_content=Content
 label_com_aeiou_bigbang_domain_message_id=Id
