--- a/deploy/database_my.properties
+++ b/deploy/database_my.properties
@@ -1,6 +1,6 @@
-#Updated at Fri Jan 18 16:49:44 EST 2013
-#Fri Jan 18 16:49:44 EST 2013
+#Created by JInto - www.guh-software.de
+#Tue Nov 22 22:07:32 EST 2016
 database.driverClassName=org.postgresql.Driver
+database.password=XlfnsBBiI68W
 database.url=jdbc\:postgresql\://${OPENSHIFT_POSTGRESQL_DB_HOST}\:${OPENSHIFT_POSTGRESQL_DB_PORT}/my
-database.username=admin
-database.password=Knj3KpLShs5z
+database.username=adminmzgbckr
