allow user to have customizations. have not add email validation.

--- a/src/main/webapp/WEB-INF/i18n/application_en.properties
+++ b/src/main/webapp/WEB-INF/i18n/application_en.properties
@@ -1,5 +1,6 @@
 #Created by JInto - www.guh-software.de
-#Thu Nov 17 23:29:54 EST 2016
+#Tue Dec 06 00:10:15 EST 2016
+advance_setting=Advanced Settings...
 label_com_aeiou_bigbang_domain_bigtag=Big Tag
 label_com_aeiou_bigbang_domain_bigtag_authority=Authority
 label_com_aeiou_bigbang_domain_bigtag_commontagname=
