--- a/src/main/webapp/WEB-INF/i18n/application.properties
+++ b/src/main/webapp/WEB-INF/i18n/application.properties
@@ -1,5 +1,6 @@
 #Created by JInto - www.guh-software.de
-#Thu Nov 17 23:29:54 EST 2016
+#Tue Dec 06 00:10:15 EST 2016
+advance_setting=\u66F4\u591A\u8BBE\u7F6E...
 label_com_aeiou_bigbang_domain_bigtag=Big Tag
 label_com_aeiou_bigbang_domain_bigtag_authority=visible to who?
 label_com_aeiou_bigbang_domain_bigtag_commontagname=Common Tag Name
