because moved server to home pc, so switched db to use local database.

--- a/src/main/webapp/WEB-INF/i18n/messages_cn.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages_cn.properties
@@ -45,8 +45,8 @@ entity_delete_confirm=\u60A8\u786E\u5B9A\u8981\u5220\u9664?
 entity_dependency_required=The following dependencies need to be created first\:
 entity_find=Find {0}
 entity_list_all=List all {0}
-entity_not_found=\u6CA1\u6709\u627E\u5230\u4EFB\u4F55\u201D{0}\u201C\u7C7B\u8BB0\u5F55\u3002
-entity_not_found_single=No {0} found with this id.
+entity_not_found=\u6CA1\u6709\u627E\u5230\u4EFB\u4F55\u516C\u5F00\u7684\u201D{0}\u201C\u7C7B\u8BB0\u5F55\u3002
+entity_not_found_single=No visible {0} found with this id.
 entity_reference_not_managed=This relationship is managed from the {0} side.
 entity_show=Show {0}
 entity_tag_create=\u65B0\u52A0\u4E00\u4E2A\u6807\u7B7E\uFF01
