--- a/src/main/webapp/WEB-INF/i18n/messages_fr.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages_fr.properties
@@ -46,8 +46,8 @@ entity_delete_confirm=Are you sure want to delete this item?
 entity_dependency_required=The following dependencies need to be created first\:
 entity_find=Find {0}
 entity_list_all=List all {0}
-entity_not_found=No {0} found.
-entity_not_found_single=No {0} found with this id.
+entity_not_found=No visible {0} found.
+entity_not_found_single=No visible {0} found with this id.
 entity_reference_not_managed=This relationship is managed from the {0} side.
 entity_show=Show {0}
 entity_tag_create=Create a New Tag\!
